<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <include layout="@layout/toolbar"/>

        <Button
            android:id="@+id/btn_business_permit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/business_permit"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_busted_street_lights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/busted_street_lights"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_delayed_salaries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/delayed_salaries"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_illegal_parking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/illegal_parking"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_uncollected_garbage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/uncollected_garbage"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edges"
            android:padding="20dp"
            android:text="@string/others"
            android:textSize="25sp"/>

    </LinearLayout>

</ScrollView>